Create and delete customer address
